<resources>
    <string name="app_name">Quiz</string>
    <string name="true_btn">TRUE</string>
    <string name="question">Question</string>
    <string name="false_btn">FALSE</string>
    <string name="next_btn">Next</string>
    <string name="previous_btn">Previous</string>
    <string name="notice_true">Bạn hay lắm =^.^=</string>
    <string name="notice_false">Bạn dở lắm T.T</string>

    <string name="question1">1 + 1 = 2</string>
    <string name="question2">2 + 2 = 4</string>
    <string name="question3">4 + 4 = 8</string>
    <string name="question4">8 + 8 = 16</string>
    <string name="question5">16 + 16 = 32</string>
    <string name="question6">2 + 3 = 6</string>
    <string name="question7">3 + 8 = 10</string>
    <string name="question8">32 + 32 = 64</string>
    <string name="question9">64 + 64 = 128</string>
    <string name="question10">1 + 0 = 0</string>
</resources>